fix spacing between main element and sidebar

--- a/frontend/src/components/home/home.module.scss
+++ b/frontend/src/components/home/home.module.scss
@@ -35,4 +35,5 @@ body {
 
 .main {
   grid-area: content;
+  margin: 0 1em;
 }
